--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body{
 	margin:0;
 	font-family: 'Roboto', sans-serif;
+	overflow-x: : hidden;
 }
 .container{
 	display: flex;
@@ -114,28 +115,38 @@ em{
 /*format smarphone*/
 @media screen and (max-width: 720px){
 
-.container{
-	flex-direction: column;
-}
-.left, .right{
-	width: 100%;
-}
-.loisirs{
-	position: inherit;
-}
-.title-sm{
-	display: block;
-}
-.title-lg{
-	display: none;
-}
-.photo{
-	text-align: center;
-}
-.right{
-	text-align: justify;
-	margin: 5%;
-}
+	.container{
+		flex-direction: column;
+	}
+	.left, .right{
+		width: 100%;
+		padding: 50px 0% 20px 0%;
+		text-align: center;
+	}
+	.col3 .col7
+	{
+		width: 100%;
+	}
+	.loisirs{
+		position: inherit;
+	}
+	.title-sm{
+		display: block;
+	}
+	.title-lg{
+		display: none;
+	}
+	.photo{
+		text-align: center;
+	}
+	.right section, .right header, .right footer{
+		margin: 0 5% 0 5%; 
+	}
+	.col{
+		width: 100%;
+	}
+
+
 }
 
 
