--- a/style.css
+++ b/style.css
@@ -2,11 +2,10 @@
 body{
 	margin:0;
 	font-family: 'Roboto', sans-serif;
-	overflow-x: : hidden;
+	
 }
 .container{
 	display: flex;
-	flex: wrap;
 }
 /*partie gauche*/
 .photo{
@@ -121,7 +120,7 @@ header
 	.left, .right{
 		width: 100%;
 		padding: 50px 0% 20px 0%;
-		text-align: center;
+		text-align: center justify;
 	}
 	.col3 .col7
 	{
